2003-06-02  Jesper Harder  <harder@ifa.au.dk>

	* gnus-sum.el (gnus-get-newsgroup-headers): Unfold headers.

2003-05-31  Jesper Harder  <harder@ifa.au.dk>

	* gnus-art.el (article-unsplit-urls): Use gnus-treat-article
	rather than gnus-display-mime-function.

2003-05-30  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-use-long-group-names): new variable
	(gnus-registry-add-group): use it
	(gnus-registry-trim-articles-without-groups): new variable
	(gnus-registry-delete-group): use it
	(gnus-registry-unload-hook): uninstall all the hooks

	* spam.el (spam-install-hooks-function, spam-unload-hook): new
	functions so users that load spam.el for customization don't get
	all the hooks installed
	(spam-install-hooks): new variable, set to t by default if user
	has one of the spam-use-* variables set

	* spam-stat.el (spam-stat-install-hooks, spam-stat-unload-hook): new
	functions so users that load spam-stat.el for customization don't get
	all the hooks installed

2003-05-30  Dave Love  <fx@gnu.org>

	* rfc2047.el (rfc2047-decode): Don't use
	mm-with-unibyte-current-buffer.

	* qp.el (quoted-printable-decode-string): Use
	mm-with-unibyte-buffer.

2003-05-29  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-save): allow forced saving even
	when registry is not dirty.  Use gnus-registry-trim to shorten the
	gnus-registry-alist.
	(gnus-registry-max-entries): new variable
	(gnus-registry-trim): new function, trim gnus-registry-alist to
	size gnus-registry-max-entries, sorting by entry mtime so the
	newest entries stick around

	* gnus-start.el (gnus-gnus-to-quick-newsrc-format): instead of
	just one specific variable, allow a list of specific variables

2003-05-28  Dave Love  <fx@gnu.org>

	* rfc2047.el (rfc2047-encode-region): Skip ASCII at beginning and
	end of region.

2003-05-28  Jesper Harder  <harder@ifa.au.dk>

	* lpath.el: Add put-char-table and get-char-table.

2003-05-28  Teodor Zlatanov  <tzz@lifelogs.com>
