@@ -1,5 +1,7 @@
 2003-06-02  Jesper Harder  <harder@ifa.au.dk>
 
+	* gnus-cus.el (defvar): Silence byte-compiler warnings.
+
 	* gnus-sum.el (gnus-get-newsgroup-headers): Unfold headers.
 
 2003-05-31  Jesper Harder  <harder@ifa.au.dk>
